# basic-sine-synth

./: Cargo.toml  README.md  bundler.toml
src/: editor.rs  lib.rs  main.rs  sine.rs
xtask/: Cargo.toml
