[package]
name = "basic_sine_synth"
version = "0.2.0"
edition = "2021"
authors = ["bkbkb networks <kabi@bkbkb.net>"]
license = "GPL-3.0-or-later"
homepage = "https://bkbkb.net"
description = "Just a basic sine synthesizer"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/bkbkb-net/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/bkbkb-net/nih-plug.git", default_features = false, features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/bkbkb-net/nih-plug.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
